# docs/api-openapi.yaml
@@ -1,23 +1,99 @@
 openapi: 3.0.0
 info:
-  title: Fakebook Management API
+  title: Mirronline Management API
   version: 1.0.0
+
 servers:
   - url: http://127.0.0.1:8000
+
 components:
   securitySchemes:
     apikeyAuth:
       type: http
       scheme: apikey
+
 security:
   - apikeyAuth: []
+
 paths:
+  /api/article:
+    post:
+      tags:
+        - article
+      summary: Creates a new article.
+      description: Creates a new article with title, content, image, and associated newspaper ID.
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                image:
+                  type: string
+                  format: binary
+                  description: The image of the article.
+      parameters:
+        - name: title
+          in: query
+          schema:
+            type: string
+          description: The title of the article.
+          example: "Article on abortion rights"
+        - name: content
+          in: query
+          schema:
+            type: string
+          description: The content of the article.
+          example: "This is the detailed content of the article."
+        - name: news_paper_id
+          in: query
+          schema:
+            type: integer
+          description: The ID of the newspaper associated with the article.
+          example: 123
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  articleId:
+                    type: integer
+                    description: The ID of the created article.
+                    example: 42
+
+    delete:
+      tags:
+        - article
+      summary: Deletes an existing article.
+      description: Deletes an article by its ID.
+      parameters:
+        - name: articleId
+          in: query
+          schema:
+            type: integer
+          description: The ID of the article to be deleted.
+          example: 42
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Confirmation message.
+                    example: "Article deleted successfully."
+
   /api/user:
     post:
       tags:
         - default
-      summary: http://127.0.0.1:8000/api/user
-      description: Creates a new user and associated profile.
+      summary: Creates a new user and associated profile.
       requestBody:
         content:
           multipart/form-data:
@@ -32,104 +108,78 @@ paths:
           in: query
           schema:
             type: string
-          description: The username of the user to be created
+          description: The username of the user.
           example: Matella
         - name: password
           in: query
           schema:
             type: string
-          description: The cleartext password for the new user
+          description: The password of the user.
           example: test
         - name: email
           in: query
           schema:
             type: string
-          description: The email address for the new user
+          description: The email of the user.
           example: matella@example.com
-        - name: firstName
-          in: query
-          schema:
-            type: string
-          description: The first name for the new profile
-          example: Mat
-        - name: lastName
-          in: query
-          schema:
-            type: string
-          description: The last name for the new profile
-          example: Ella
-        - name: bio
-          in: query
-          schema:
-            type: string
-          description: The biography for the new profile
-          example: This user was created using the API with an avatar.
-        - name: country
-          in: query
-          schema:
-            type: string
-          description: The country for the new profile
-          example: Germany
       responses:
         "200":
           description: Successful response
           content:
             application/json: {}
+
   /api/profile/relationship:
     post:
       tags:
         - default
-      summary: http://127.0.0.1:8000/api/profile/relationship
-      description: Creates a new relationship (friendship) between two profiles.
-      requestBody:
-        content: {}
+      summary: Creates a new relationship between two profiles.
       parameters:
         - name: profileId1
           in: query
           schema:
             type: integer
-          description: ProfileId1
+          description: First profile ID.
           example: "1"
         - name: profileId2
           in: query
           schema:
             type: integer
-          description: ProfileId2
+          description: Second profile ID.
           example: "9"
       responses:
         "200":
           description: Successful response
           content:
             application/json: {}
+
     delete:
       tags:
         - default
-      summary: http://127.0.0.1:8000/api/profile/relationship
-      description: Deletes a relationship between two profiles.
+      summary: Deletes a relationship between two profiles.
       parameters:
         - name: profileId1
           in: query
           schema:
             type: integer
-          description: ProfileId1
+          description: First profile ID.
           example: "1"
         - name: profileId2
           in: query
           schema:
             type: integer
-          description: ProfileId2
+          description: Second profile ID.
           example: "9"
       responses:
         "200":
           description: Successful response
           content:
             application/json: {}
+
   /api/profile/post:
     post:
       tags:
         - default
-      summary: http://127.0.0.1:8000/api/profile/post
-      description: Creates a new comment.
+      summary: Creates a new comment.
       requestBody:
         content:
           application/json:
@@ -138,134 +188,42 @@ paths:
               properties:
                 content:
                   type: string
-                  description: The text content of the new comment
+                  description: The text content of the comment.
       parameters:
         - name: profileId
           in: query
           schema:
             type: integer
-          description: The profile id of the author of the comment
+          description: Profile ID of the author.
           example: "15"
-        - name: created
-          in: query
-          schema:
-            type: integer
-          description: The creation date as unix (epoch) timestamp, may be in the future
-          example: "1663082878"
-        - name: content
-          in: query
-          schema:
-            type: string
-          description: The text content of the new comment
-          example: this user should have an avatar
       responses:
         "200":
           description: Successful response
           content:
             application/json: {}
+
     delete:
       tags:
         - default
-      summary: http://127.0.0.1:8000/api/profile/post
-      description: Deletes a post.
+      summary: Deletes a post.
       parameters:
         - name: postId
           in: query
           schema:
             type: integer
-          description: The id of the post to be deleted.
+          description: Post ID to be deleted.
           example: "18"
       responses:
         "200":
           description: Successful response
           content:
             application/json: {}
-  /api/profile/post/reaction:
-    post:
-      tags:
-        - default
-      summary: http://127.0.0.1:8000/api/profile/post/reaction
-      description: >-
-        Creates a new reaction (like / dislike). This is a planned reaction. You
-        can either specify a postId OR a targetProfileId and postOffset
-        (exclusive).
-      requestBody:
-        content: {}
-      parameters:
-        - name: profileId
-          in: query
-          schema:
-            type: integer
-          description: The profile id of the reacting user
-          example: "1"
-        - name: type
-          in: query
-          schema:
-            type: string
-          description: The type of reaction ["Like", "Dislike"]
-          example: Dislike
-        - name: timeDelta
-          in: query
-          schema:
-            type: integer
-          description: >-
-            The delta in seconds to delay the reaction by after the post
-            creation date
-          example: "0"
-        - name: postId
-          in: query
-          schema:
-            type: integer
-          description: >-
-            The id of the post to react to. Specify this OR targetProfileId and
-            postOffset
-          example: "22"
-        - name: targetProfileId
-          in: query
-          schema:
-            type: integer
-          description: >-
-            The targetProfile to which to react. Also specify postOffset. Omit
-            postId!
-          example: "8"
-        - name: postOffset
-          in: query
-          schema:
-            type: integer
-          description: >-
-            The post offset to which to react (0 = first post from profile).
-            Also specify targetProfile. Omit postId.
-          example: "2"
-      responses:
-        "200":
-          description: Successful response
-          content:
-            application/json: {}
-    delete:
-      tags:
-        - default
-      summary: http://127.0.0.1:8000/api/profile/post/reaction
-      description: >-
-        Deletes a planned! reaction. If the reaction has already been executed,
-        it can't be deleted via the API anymore.
-      parameters:
-        - name: reactionId
-          in: query
-          schema:
-            type: integer
-          description: The id of the planned reaction to be deleted.
-          example: "8"
-      responses:
-        "200":
-          description: Successful response
-          content:
-            application/json: {}
+
   /api/advertisement:
     post:
       tags:
         - default
-      summary: http://127.0.0.1:8000/api/advertisement
-      description: Creates a new advertisement.
+      summary: Creates a new advertisement.
       requestBody:
         content:
           multipart/form-data:
@@ -274,39 +232,31 @@ paths:
               properties:
                 image:
                   type: string
-                  description: The image of the advertisement.
                   format: binary
+                  description: Advertisement image.
       parameters:
         - name: text
           in: query
           schema:
             type: string
-          description: The text content of the advertisement.
-          example: This is the advertisement text
-        - name: url
-          in: query
-          schema:
-            type: string
-          description: >-
-            The url redirected to when advertisement clicked. NOT VALIDATED BY
-            THE SERVER! Check before submitting your request!
-          example: https://example.com
+          description: Text content of the advertisement.
+          example: "This is the advertisement text."
       responses:
         "200":
           description: Successful response
           content:
             application/json: {}
+
     delete:
       tags:
         - default
-      summary: http://127.0.0.1:8000/api/advertisement
-      description: Deletes an existing advertisement.
+      summary: Deletes an advertisement.
       parameters:
         - name: adId
           in: query
           schema:
             type: integer
-          description: The id of the advertisement to be deleted.
+          description: Advertisement ID to be deleted.
           example: "4"
       responses:
         "200":
