# src/api/forms.py
@@ -3,6 +3,8 @@ from django import forms
 from posts.models import Post
 from profiles.models import Profile
 from advertisements.models import Advertisement
+from articles.models import Article, NewsPaper
+
 
 class APIAdvertisementModelForm(forms.ModelForm):
     image = forms.ImageField(label='', required=True)
@@ -21,3 +23,10 @@ class APIProfileModelForm(forms.ModelForm):
         model = Profile
         fields = ('avatar',)
 
+
+class APIArticleModelForm(forms.ModelForm):
+    image = forms.ImageField(label='', required=True)
+    
+    class Meta:
+        model = Article
+        fields = ('image',)
