# src/api/urls.py
@@ -1,5 +1,5 @@
 from django.urls import path
-from .views import create_user, modify_relationship, create_delete_post, modify_reaction, create_delete_advertisement
+from .views import create_user, modify_relationship, create_delete_post, modify_reaction, create_delete_advertisement, create_delete_article
 
 app_name = "api"
 
@@ -9,6 +9,7 @@ urlpatterns = [
     path('profile/post', create_delete_post, name='create-delete-post'),
     path('profile/post/reaction', modify_reaction, name='modify-reaction'),
     path('advertisement', create_delete_advertisement, name='create-delete-advertisement'),
+    path('article', create_delete_article, name='create-delete-article'),
 ]
 
 
